<resources>
    <string name="app_name">Vacation Scheduler</string>
    <string name="app_title">Vacation Scheduler</string>
    <string name="enter_app">Enter</string>
    <string name="add_vacation">Add Vacation</string>
    <string name="vacation_name">Vacation Name</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="excursions">Excursions</string>
    <string name="add_excursion">Add Excursion</string>
    <string name="excursion_title">Excursion Title</string>
    <string name="excursion_date">Excursion Date</string>
    <string name="vacation_list">Vacations</string>
    <string name="vacation_detail">Vacation Details</string>
    <string name="excursion_detail">Excursion Details</string>
    <string name="cannot_delete_vacation">Cannot delete vacation with excursions. Delete excursions first.</string>
    <string name="vacation_saved">Vacation saved</string>
    <string name="vacation_deleted">Vacation deleted</string>
    <string name="excursion_saved">Excursion saved</string>
    <string name="excursion_deleted">Excursion deleted</string>
    <string name="no_vacations">No vacations yet. Tap + to add one.</string>
    <string name="set_alert">Set Alert</string>
    <string name="share">Share</string>
    <string name="alert_set">Alerts set for vacation start and end dates</string>
    <string name="invalid_date_format">Invalid date format. Use MM/DD/YYYY</string>
    <string name="end_date_before_start">End date must be after start date</string>
    <string name="please_enter_dates">Please enter start and end dates first</string>
    <string name="vacation_starting">Vacation Starting</string>
    <string name="vacation_ending">Vacation Ending</string>
    <string name="channel_name">Vacation Alerts</string>
    <string name="channel_description">Alerts for vacation start and end dates</string>
    <string name="set_excursion_alert">Set Excursion Alert</string>
    <string name="excursion_alert_set">Alert set for excursion date</string>
    <string name="please_enter_excursion_date">Please enter excursion date first</string>
    <string name="excursion_date_not_in_vacation">Excursion date must be during the vacation period</string>
    <string name="search_hint">Search vacations by name or hotel…</string>
    <string name="report">Report</string>
    <string name="report_title">Vacation Report</string>
    <string name="report_generated">Generated: %1$s</string>
    <string name="col_vacation_name">Vacation Name</string>
    <string name="col_hotel">Hotel</string>
    <string name="col_start_date">Start Date</string>
    <string name="col_end_date">End Date</string>
    <string name="col_excursions">Excursions</string>
    <string name="confirm_delete_title">Confirm Delete</string>
    <string name="confirm_delete_vacation">Are you sure you want to delete this vacation?</string>
    <string name="confirm_delete_excursion">Are you sure you want to delete this excursion?</string>
    <string name="name_too_long">Name must be 100 characters or fewer</string>
</resources>
